--- a/trunk/src/gui/IpdDump_NewGUI.form
+++ b/trunk/src/gui/IpdDump_NewGUI.form
@@ -242,8 +242,17 @@
                 <Property name="accelerator" type="javax.swing.KeyStroke" editor="org.netbeans.modules.form.editors.KeyStrokeEditor">
                   <KeyStroke key="Ctrl+T"/>
                 </Property>
+                <Property name="selected" type="boolean" value="true"/>
                 <Property name="text" type="java.lang.String" value="Tool Tips"/>
               </Properties>
+            </MenuItem>
+            <MenuItem class="javax.swing.JCheckBoxMenuItem" name="AdrrBookAllCheckBox">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Use Adrress Book-All DB"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="AdrrBookAllCheckBoxActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
@@ -299,7 +308,9 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Component id="mainTabbedPane" alignment="0" pref="754" max="32767" attributes="0"/>
           <Group type="102" alignment="0" attributes="0">
-              <Component id="status_label" pref="744" max="32767" attributes="0"/>
+              <Component id="status_label" pref="594" max="32767" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="jProgressBar1" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
@@ -307,9 +318,12 @@
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="1" attributes="0">
-              <Component id="mainTabbedPane" pref="478" max="32767" attributes="0"/>
+              <Component id="mainTabbedPane" pref="475" max="32767" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="status_label" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="1" attributes="0">
+                  <Component id="status_label" min="-2" max="-2" attributes="0"/>
+                  <Component id="jProgressBar1" min="-2" max="-2" attributes="0"/>
+              </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
@@ -340,7 +354,7 @@
             </DimensionLayout>
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jScrollPane1" alignment="0" pref="450" max="32767" attributes="0"/>
+                  <Component id="jScrollPane1" alignment="0" pref="447" max="32767" attributes="0"/>
               </Group>
             </DimensionLayout>
           </Layout>
@@ -429,7 +443,7 @@
             </DimensionLayout>
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jScrollPane2" alignment="0" pref="450" max="32767" attributes="0"/>
+                  <Component id="jScrollPane2" alignment="0" pref="447" max="32767" attributes="0"/>
               </Group>
             </DimensionLayout>
           </Layout>
@@ -524,7 +538,7 @@
             </DimensionLayout>
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jScrollPane3" alignment="0" pref="450" max="32767" attributes="0"/>
+                  <Component id="jScrollPane3" alignment="0" pref="447" max="32767" attributes="0"/>
               </Group>
             </DimensionLayout>
           </Layout>
@@ -592,7 +606,7 @@
             </DimensionLayout>
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jScrollPane4" alignment="0" pref="450" max="32767" attributes="0"/>
+                  <Component id="jScrollPane4" alignment="0" pref="447" max="32767" attributes="0"/>
               </Group>
             </DimensionLayout>
           </Layout>
@@ -689,7 +703,7 @@
             </DimensionLayout>
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jScrollPane5" alignment="0" pref="450" max="32767" attributes="0"/>
+                  <Component id="jScrollPane5" alignment="0" pref="447" max="32767" attributes="0"/>
               </Group>
             </DimensionLayout>
           </Layout>
@@ -840,6 +854,11 @@
           <Font name="Tahoma" size="12" style="0"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Welcome to IPDdump - http://code.google.com/p/ipddump/"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JProgressBar" name="jProgressBar1">
+      <Properties>
+        <Property name="focusable" type="boolean" value="false"/>
       </Properties>
     </Component>
   </SubComponents>
